fix: videos/hot & news/hot API to get distinct sources