@@ -3,12 +3,13 @@ package site.kkokkio.domain.source.service;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -20,7 +21,6 @@ import site.kkokkio.domain.keyword.entity.Keyword;
 import site.kkokkio.domain.keyword.service.KeywordMetricHourlyService;
 import site.kkokkio.domain.post.dto.PostDto;
 import site.kkokkio.domain.post.service.PostService;
-import site.kkokkio.domain.source.controller.dto.TopSourceListResponse;
 import site.kkokkio.domain.source.dto.NewsDto;
 import site.kkokkio.domain.source.dto.SourceDto;
 import site.kkokkio.domain.source.dto.TopSourceItemDto;
@@ -216,66 +216,34 @@ public class SourceService {
 	}
 
 	/**
-	 * 실시간 인기 키워드와 관련된 Youtube Source 목록을 페이지네이션하여 조회
+	 * 실시간 인기 키워드와 관련된 Source 목록을 페이지네이션하여 조회
 	 * @param pageable 페이지네이션 및 정렬 정보.
+	 * @param platform 관련 플랫폼 enum.
 	 * @return 페이지네이션된 TopSourceListResponse 객체.
 	 */
 	@Transactional(readOnly = true)
-	public TopSourceListResponse getTopYoutubeSources(Pageable pageable) {
+	public Page<TopSourceItemDto> getTopSourcesByPlatform(Pageable pageable, Platform platform) {
 
 		// 현재 시스템의 실시간 인기 키워드 목록(ID)을 가져옵니다. (데이터 파이프라인의 Task 2 결과물)
 		List<KeywordMetricHourlyDto> topKeywords = keywordMetricHourlyService.findHourlyMetrics();
-		List<Long> topKeywordIds = topKeywords.stream()
-				.map(KeywordMetricHourlyDto::keywordId)
-				.collect(Collectors.toList());
+		List<Long> postIds = topKeywords.stream()
+				.map(KeywordMetricHourlyDto::postId)
+    			.filter(Objects::nonNull)
+				.toList();
 
-		// 인기 키워드가 없으면 빈 페이지 반환
-		if (topKeywordIds.isEmpty()) {
-			return TopSourceListResponse.from(Page.empty(pageable));
+		// 연관 포스트가 없으면 빈 페이지 반환
+		if (postIds.isEmpty()) {
+			return Page.empty(pageable);
 		}
 
-		// PostSourceRepository에서 인기 키워드 ID 목록과 플랫폼(YOUTUBE),
-		// Pageable 정보를 사용하여 조회 및 DTO 변환
-		Page<TopSourceItemDto> dtoPage = postSourceRepository
-				.findTopSourcesByKeywordIdsAndPlatformOrderedByScore(
-						topKeywordIds,
-						Platform.YOUTUBE,
-						pageable
+		// PostSourceRepository 에서 인기 post ID 목록과 플랫폼,
+		// ORDER BY MAX(kmh.score) DESC 정상 동작을 위해 Pageable 변환
+		Pageable pg = PageRequest.of(pageable.getPageNumber(), pageable.getPageSize(), Sort.unsorted());
+		return postSourceRepository
+				.findTopSourcesByPostIdsAndPlatformOrderedByScore(
+						postIds,
+						platform,
+						pg
 				);
-
-		// Page<TopSourceItemDto>를 TopSourceListResponse 객체로 변환하여 반환
-		return TopSourceListResponse.from(dtoPage);
-	}
-
-	/**
-	 * 실시간 인기 키워드와 관련된 네이버 뉴스 Source 목록을 페이지네이션하여 조회
-	 * @param pageable 페이지네이션 및 정렬 정보.
-	 * @return 페이지네이션된 TopSourceListResponse 객체.
-	 */
-	@Transactional(readOnly = true)
-	public TopSourceListResponse getTopNaverNewsSources(Pageable pageable) {
-
-		// 현재 시스템의 실시간 인기 키워드 목록(ID)을 가져옵니다. (데이터 파이프라인의 Task 2 결과물)
-		List<KeywordMetricHourlyDto> topKeywords = keywordMetricHourlyService.findHourlyMetrics();
-		List<Long> topKeywordIds = topKeywords.stream()
-				.map(KeywordMetricHourlyDto::keywordId)
-				.collect(Collectors.toList());
-
-		// 인기 키워드가 없으면 빈 페이지 반환
-		if (topKeywordIds.isEmpty()) {
-			return TopSourceListResponse.from(Page.empty(pageable));
-		}
-
-		// PostSourceRepository에서 인기 키워드 ID 목록과 플랫폼(NAVER_NEWS),
-		// Pageable 정보를 사용하여 조회 및 DTO 변환
-		Page<TopSourceItemDto> dtoPage = postSourceRepository
-				.findTopSourcesByKeywordIdsAndPlatformOrderedByScore(
-						topKeywordIds,
-						Platform.NAVER_NEWS,
-						pageable
-				);
-
-		// Page<TopSourceItemDto>를 TopSourceListResponse 객체로 변환하여 반환
-		return TopSourceListResponse.from(dtoPage);
 	}
 }
